--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
     </footer>
 
     <!-- JavaScript -->
+    <script src="js/auth.js"></script>
     <script src="js/main.js"></script>
 
 </body>
